# home-assistant-mcp

./: .gitignore  Dockerfile  EXTENSIVE_REFINEMENT_SUMMARY.md  README.md  SOTA_ENHANCEMENT_SUMMARY.md  config.example.yaml  docker-compose.yml  fix_emojis.py  hacs.json  llms-full.txt  llms.txt  pyproject.toml  start.ps1
.github/workflows/: docker.yml
examples/: README.md  advanced_orchestration_examples.md  basic_control_examples.md
hacs-submission/: README.md  SUBMISSION_GUIDE.md  community-announcement.md
mcpb/: package.json
prompts/: automation_debugging.md  energy_optimization_guide.md  security_best_practices.md  smart_home_setup.md
skills/: ha-operator.md
src/home_assistant_mcp/: __init__.py  __main__.py  agentic.py  cli.py  client.py  portmanteau.py  prompts.py  server.py  state.py  transport.py
src/home_assistant_mcp/core/: config.py  globals.py  ha_client.py
src/home_assistant_mcp/mcp/: server.py  tools.py
tests/: conftest.py  test_basic.py  test_core_tools.py  test_integration.py  test_orchestration.py  test_performance.py  test_runner.py  test_security_energy.py
tests/fixtures/: mock_ha_api.py  sample_data.py
web_sota/: biome.json  index.html  package-lock.json  package.json  start.ps1  vite.config.ts
web_sota/src/: App.tsx  index.css
web_sota/src/components/layout/: app-layout.tsx  sidebar.tsx
web_sota/src/pages/: chat.tsx  dashboard.tsx  settings.tsx
webapp/: index.html  package.json  start.ps1  vite.config.ts
webapp/src/: App.tsx  index.css
webapp/src/components/common/: ErrorBoundary.tsx
webapp/src/components/layout/: AppLayout.tsx  Sidebar.tsx
webapp/src/lib/: api.ts
webapp/src/pages/: Automations.tsx  Dashboard.tsx  Help.tsx  Services.tsx  Settings.tsx  States.tsx  Tools.tsx
zed-integration/: zed-mcp-config.json
