[project]
name = "home-assistant-mcp"
version = "2.5.0"
description = "Industrialized FastMCP 3.2.0 server for Home Assistant orchestration. SOTA v12.0 compliance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.15.2",
    "fastmcp>=3.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.0",
    "structlog>=23.0.0",
    "prefab-ui>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/home_assistant_mcp"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
